--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,31 @@ body {
 }
 
 .window {
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 98%;
     background-color: lightgray;
     border: whitesmoke outset 5px;
 }
 
 .grab_bar {
-    height: 10px;
+    display: flex;
+    flex-direction: row-reverse;
+    height: 7%;
+    width: 100%;
+    background-color: lightgrey;
 }
 
 #notepad {
     background-color: white;
+    min-height: 93%;
+    width: 100%;
+    max-height: 100%;
 }
 
 #squeaker {
-    background-color: blue;
+    background-color: lightblue;
+    min-height: 93%;
+    width: 100%;
+    max-height: 100%;
 }
