--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .grab_bar {
     display: flex;
-    flex-direction: row-reverse;
+    vertical-align: center;
     height: 7%;
     width: 100%;
     background-color: lightgrey;
@@ -40,4 +40,20 @@ body {
     min-height: 93%;
     width: 100%;
     max-height: 100%;
+}
+
+.objective {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: grey outset 5px;
+    min-height: 10%;
+    min-width: 90%;
+}
+
+.objective_title {
+    width: 100%;
+    height: 4vh;
+    font-size: 3vh;
+    background-color: grey;
 }
