--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -33,6 +33,7 @@ body {
     min-height: 93%;
     width: 100%;
     max-height: 100%;
+    overflow-y: scroll;
 }
 
 #squeaker {
@@ -40,6 +41,7 @@ body {
     min-height: 93%;
     width: 100%;
     max-height: 100%;
+    overflow-y: scroll;
 }
 
 .objective {
