--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,19 @@
+* {
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
 body {
     margin: 0;
     display: flex;
     height: 100vh;
+}
+
+p {
+    color: white;
+}
+
+span {
+    color: #8D9AA6;
 }
 
 #notepad_window {
@@ -26,6 +38,7 @@ body {
     height: 7%;
     width: 100%;
     background-color: lightgrey;
+    align-items: center;
 }
 
 #notepad {
@@ -37,7 +50,7 @@ body {
 }
 
 #squeaker {
-    background-color: lightblue;
+    background-color: #261326;
     min-height: 93%;
     width: 100%;
     max-height: 100%;
@@ -62,8 +75,8 @@ body {
 
 .squeak {
     display: flex;
-    border: 1px solid black;
-    margin: 2rem 5rem;
+    border: 1px solid #514259;
+    margin: 0rem 5rem;
     padding: 1rem;
 }
 
