--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -123,6 +123,7 @@ span {
 .engagement div {
 
     display: flex;
+    align-items: center;
 
 }
 
@@ -130,7 +131,6 @@ span {
 
     margin: 0;
     padding: 0 1rem;
-    justify-self: center;
 
 }
 
