--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     display: flex;
     height: 100vh;
+    width: 100vw;
 }
 
 p {
@@ -14,6 +15,10 @@ p {
 
 span {
     color: #8D9AA6;
+}
+
+.main_body {
+    width: 98vw;
 }
 
 #notepad_window {
@@ -41,9 +46,16 @@ span {
 .taskbar {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex: 1;
     background-color: lightgray;
     border: whitesmoke outset 5px;
+    height: 11.5%;
+}
+
+.taskbar > div {
+    margin: 3vh;
+    font-size: 4vh;
 }
 
 .section {
@@ -61,10 +73,18 @@ span {
 .grab_bar {
     display: flex;
     vertical-align: center;
+    justify-content: space-between;
     height: 7%;
     width: 100%;
     background-color: lightgrey;
     align-items: center;
+}
+
+.x {
+    height: 80%;
+    width: auto;
+    border: grey outset 3px;
+    align: left;
 }
 
 #notepad {
@@ -138,8 +158,8 @@ span {
 .squeakImage {
     align-self: center;
     margin: 1rem 0;
-    width: 640px;
-    height: 360px;
+    width: 94%;
+    height: auto;
 }
 
 .engagement {
